# Cognitive-Speech-TTS

./: CONTRIBUTING.md  README.md  Synthesizer.java  negdegree.json
Android/: README.md
Android/Sample/: build.gradle
Android/Sample/app/: build.gradle
Blog-Samples/: .gitattributes  readme.md
Blog-Samples/1988418/: file_list.txt
Blog-Samples/202408-NTTS/: voicelist
Blog-Samples/2236871/: file_list.txt
Blog-Samples/2920882/: file_list.txt
Blog-Samples/3672286/: Scripts.txt
Blog-Samples/3933744/conversational vs. normal/: Text.txt
Blog-Samples/3933744/demo_of_new_voices/: Text.txt
Blog-Samples/Introducing-Dragon-HD-Omni/: dragonhdomni_voice_list.json  public_voice_list.json
ClientSDK/: CMakeLists.txt  LICENSE  README.md  iot-sdk.sln
ClientSDK/TTSClientSDK/: ReadMe.txt  TTSClientSDK.vcxproj  TTS_SDK.c  TTS_SDK.h
ClientSDK/TTSClientSDK/Linux/: CMakeLists.txt
ClientSDK/TTSClientSDK/Windows/: CMakeLists.txt
ClientSDK/TTSClientSDK/src/: TTSClientSDK.c  TTSClientSDKSample.c
ClientSDK/azure-c-shared-utility/: CMakeLists.txt  azure-c-shared-utility-linux.vcxproj  azure-c-shared-utility.vcxproj
ClientSDK/azure-c-shared-utility/adapters/: audio_sys_linux.c  audio_sys_win32.cpp  condition_pthreads.c  httpapi_curl.c  httpapi_winhttp.c  lock_pthreads.c  platform_win32.c  socketio_berkeley.c  threadapi_pthreads.c  threadapi_win32.c  uniqueid_win32.c  wsio_libwebsockets.c
ClientSDK/azure-c-shared-utility/src/: gb_stdio.c  gb_time.c  tlsio_openssl.c  uhttp.c
ClientSDK/include/: TTSClientSDK.h
ClientSDK/source/: TTSClientSDK.c
ClientSDK/tests/multiThreadedTest/: TTSClientSDK.multiThreadedTest.c
ClientSDK/tests/normal test/: TTSClientSDKSample.c
ClientSDK/tests/normalTest/: CMakeLists.txt  TTSClientSDK.normalTest.c  TTSClientSDK_x64.sh  TTSClientSDK_x86.bat
CustomLexiconValidation/: CustomLexiconValidation.deps.json  CustomLexiconValidation.runtimeconfig.dev.json  HowToUseCmd.txt  README.md
CustomLexiconValidation/XmlSchema/: CustomLexicon.xsd
CustomLexiconValidation/invalidCustomLexicon/: invalid_lang.xml  invalid_phoneme.xml  invalid_xml.xml
CustomLexiconValidation/validCustomLexicon/: De-DE.xml  En-GB.xml  En-US.xml  Es-ES.xml  Fr-FR.xml  It-IT.xml  Ja-JP.xml  Ko-KR.xml  Zh-CN.xml
CustomVoice/: DSAT examples.md  DSAT-examples.md
CustomVoice-API/: README.md
CustomVoice-API-Samples/CSharp/: CustomVoice-API.Core.csproj  CustomVoice-API.Core.sln  CustomVoice-API.sln  README.md
CustomVoice-API-Samples/CSharp/CustomVoice-API/: APIArguments.cs  APIHandler.cs  APIKind.cs  Action.cs  App.config  ArgumentsDescription.cs  CustomVoice-API.csproj  CustomVoiceAPI.cs  Program.cs  packages.config
CustomVoice-API-Samples/Java/: README.md  SSMLTextInputSample.txt  en-US.txt  pom.xml  zh-CN.txt
CustomVoice-API-Samples/Java/src/: VoiceSynthesisMain.java
CustomVoice-API-Samples/Python/: README.md  Readme.txt  en-US.txt  voiceclient.py  zh-CN.txt
CustomVoice-API/CustomVoice-API/: App.config  CustomVoice-API.csproj  CustomVoiceAPI.cs  FailedHttpClientRequestException.cs  Program.cs  packages.config
CustomVoice-API/CustomVoice-API/AzureUtil/: StorageHelper.cs
CustomVoice-API/CustomVoice-API/Properties/: AssemblyInfo.cs
CustomVoice-API/CustomVoice-API/TestData/: en-US.txt  en-US_small.txt
CustomVoice-API/CustomVoice-API/VoiceAPI/: Authentication.cs  HttpClientExtensions.cs  VoiceAPIHelper.cs
CustomVoice/Sample Data/: Readme.md
CustomVoice/Sample Data/Individual utterances + matching script/: SampleScript.txt
CustomVoice/script/: readme.md  verbal-statement-all-locales.txt
CustomVoice/script/Albanian (Albania)_sq-AL/: 0000000001_0200000100_General.txt  3000000001_3000000300_Chat.txt  4000000001_4000000300_CustomerService.txt  SpeakerAuthorization.txt
CustomVoice/script/Arabic (Egypt)_ar-EG/: 0000000001_0200000100_General.txt  3000000001_3000000300_Chat.txt  4000000001_4000000300_CustomerService.txt
CustomVoice/script/Arabic (Egypt)_arEG/: 0000000001_0200000100_General.txt  3000000001_3000000300_Chat.txt  4000000001_4000000300_CustomerService.txt  SpeakerAuthorization.txt
GptClientStreaming/CSharp/: Program.cs  README.md  TtsClientStreaming.csproj
LongAudioAPI/: readme.md
MRCP/: .gitignore  README.md  test_with_freeswitch.md
MRCP/ms-recog/: packages.config
MRCP/sample-conf/: config.json  unimrcpclient.xml
PronunciationAssessment/: README.md
PronunciationAssessment/BrowserJS/: README.md  application.py  requirements.txt
PronunciationAssessment/CSharp/: PronunciationAssessment.sln  packages.config
PronunciationAssessment/Go/: README.md  go.mod  main.go
PronunciationAssessment/NodeJS/: README.md  package.json  sample.js
PronunciationAssessment/Python/: README.md  sample.py
PronunciationAssessment/Ruby/: Gemfile  README.md  sample.rb
Samples-Http/: README.md
Samples-Http/Android/: readme.md
Samples-Http/CSharp/: CognitiveServicesTTS.csproj  CognitiveServicesTTS.sln  README.md  TTSClient.cs  TTSProgram.cs
Samples-Http/Go/: main.go
Samples-Http/NETCore/: README.md  TTSProgram.cs  TTSProgram.csproj  project.json
Samples-Http/NodeJS/: README.md  TTSSample.js  TTSService.js  package.json
Samples-Http/PHP/: README.md  TTSService.php
Samples-Http/Python/: README.md  TTSSample.py  documentResponseObject.py
Samples-Http/Ruby/: README.md  TTSSample.rb
SpokenChat/: README.md
SpokenChat/CSharp/: SpokenChat.cs  chatwithaoai.csproj
SpokenChat/Python/: spokenchat.py
SsmlSchema/: README.md  ssml.txt  ssml_log.txt
SsmlSchema/xsd/: mathml.xsd  ssml.xsd  ssml_mstts.xsd  xml.xsd
TTSClientSDK/: TTS_SDK.sln
TTSClientSDK/TTS_SDK/: ReadMe.txt  TTS_SDK.c  TTS_SDK.h  TTS_SDK.vcxproj
TTSPlayer/: demo.html  readme.md
TTSPlayer/WordPress-Plugin/: msttsplayer.php  uninstall.php
TTSPlayer/tts-player/: README.md  package.json  tts-player.css  tts-player.js
TTS_client_SDK/TTS_SDK/: TTS_SDK_sample.sln
TranslatorDemo/: Readme.md
TranslatorDemo/Backend/: TranslatorServer.sln
TtsAvatar/: .gitattributes
VideoDubbing/: readme.md
ci/: azure-pipelines.yml
doctopodcast/: doctopodcast.py  lexicon.xml
(+704 files in other folders)
